<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/profile_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorAccent"
        android:src="@drawable/picture2"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:id="@+id/display_name"
        android:layout_below="@id/profile_image"/>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        android:id="@+id/view_line"
        android:layout_below="@+id/display_name"/>

    <android.support.v7.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:id="@+id/display_track" />

            <TextView
                android:layout_below="@+id/display_track"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:id="@+id/display_country" />

            <TextView
                android:layout_below="@+id/display_country"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/display_email" />

            <TextView
                android:layout_below="@+id/display_email"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:id="@+id/display_phone" />

            <TextView
                android:textColor="@color/black"
                android:layout_below="@+id/display_phone"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slack_username"
                android:id="@+id/display_slack_username" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>